k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pfsdb-client
  labels:
    app: pfsdb-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pfsdb-client
  template:
    metadata:
      labels:
        app: pfsdb-client
    spec:
      containers:
      - name: pfsdb-client
        image: registry.digitalocean.com/mpaige-container-registry/pfsdb-client:v0.1.3
        ports:
        - name: http
          containerPort: 80
