k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pfsdb-server
  labels:
    app: pfsdb-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pfsdb-server
  template:
    metadata:
      labels:
        app: pfsdb-server
    spec:
      containers:
      - name: pfsdb-server
        image: registry.digitalocean.com/mpaige-container-registry/pfsdb:v0.3.0
        ports:
        - containerPort: 80
