k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    kcert.dev/ingress: "managed"
  annotations:
    kubernetes.io/ingress.class: "nginx"
  # namespace: backend
  # annotations:
  #   kubernetes.io/ingress.class: "nginx" 
  #   cert-manager.io/issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - api.pathfinderspelldb.com
    - pathfinderspelldb.com
    # use pfsdb-tls for the staging cert
    secretName: pfsdb-tls-prod
  rules:
  - host: api.pathfinderspelldb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pfsdb-server-service
            port:
              number: 80
  - host: pathfinderspelldb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pfsdb-client-service
            port:
              number: 80
  ingressClassName: nginx
